# payy

eth/: package-lock.json
eth/artifacts/contracts/AcrossWithAuthorization.sol/: AcrossWithAuthorization.dbg.json
eth/artifacts/contracts/rollup/RollupV5.sol/: RollupV5.dbg.json
fixtures/proofs/: agg_utxo_0.proof  agg_utxo_1.proof
pkg/zk-circuits/: Cargo.toml
pkg/zk-circuits/src/aggregate_agg/: tests.rs
pkg/zk-circuits/src/test/: agg_agg.rs  extract_payy_witness.rs  mod.rs
src/: lib.rs
zisk_payy/: Cargo.toml  build.rs
zisk_payy/proof/: result.json
zisk_payy/src/: ecdsa.rs  main.rs  merkle.rs  poseidon.rs  proof_parser.rs
