[package]
name = "zisk-rollup-prover"
version = "0.1.0"
edition = "2021"
default-run = "zisk-rollup-prover"


[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
byteorder = "1.5.0"
sha2 = "0.10.8"
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git" }

# Real cryptographic implementations for ZisK (compatible versions)
secp256k1 = "0.23.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }
[patch."https://github.com/privacy-scaling-explorations/halo2curves.git"]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"

